# machine-learning-with-rust

./: Cargo.toml  README.md  ratings.csv
src/: main.rs  utils.rs
