[package]
name = "machine-learning-with-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linfa = "*"
linfa-datasets = { version = "*", features = ["winequality", "iris"] }
linfa-logistic = "*"
linfa-trees = "*"
polars = "*"
ndarray = "*"
